--- a/src/app/Form/form/form.component.css
+++ b/src/app/Form/form/form.component.css
@@ -6,21 +6,11 @@
 .form-container2 {
   display: flex;
   justify-content: center;
-}
-
-span {
-  color: red;
-  width: 50%;
-  text-align: center;
-}
-
-p {
-  font-size: 10px;
-  width: 100%;
+  width: 40%;
 }
 
 input {
-  height: 20px;
+  height: 17px;
 }
 
 .example-form {
@@ -32,10 +22,6 @@ input {
 .example-full-width {
   width: 100%;
 }
-
-/*mat-form-field {*/
-/*  border-bottom: 2px solid blue;*/
-/*}*/
 
 .form-style {
   margin-top: 2%;
@@ -54,14 +40,15 @@ h2 {
 }
 
 label {
-  font-size: 20px;
+  font-size: 16px;
 }
 
 .btn-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 10px;
+  margin-top: 15px;
+  padding-bottom: 15px;
 }
 
 mat-checkbox {
@@ -75,3 +62,16 @@ mat-checkbox {
   justify-content: center;
   align-items: center;
 }
+
+#p-checkbox b {
+  color: red;
+  font-size: 19px;
+  margin-right: 4px;
+}
+
+b {
+  margin-left: 10px;
+  color: red;
+  font-size: 15px;
+}
+
